force-app/src/objects/TR1__Call_List__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Call_List_Email_Field__c</fullName>
        <label>Call List Email Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>TR1__Work_Email__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CandidateContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.TR1__Is_Candidate_Contact__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Lists</relationshipLabel>
        <relationshipName>Call_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <description>Defines the status of the Call List</description>
        <inlineHelpText>Defines the status of the Call List</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Total_Members__c</fullName>
        <label>Total Members</label>
        <summaryForeignKey>TR1__Call_List_Member__c.TR1__Call_List__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__recordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordTypeName</label>
        <type>Text</type>
    </fields>
    <label>Call List</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Call List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Lists</pluralLabel>
    <recordTypes>
        <fullName>TR1__CandidateMarketing</fullName>
        <active>true</active>
        <label>Candidate Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>